Massive code cleanup using the new 'Clean code' option in Eclipse 3.2.